wekan.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wekan-project
  labels:
    name: wekan
---
apiVersion: v1
kind: Service
metadata:
  name: wekan
  namespace: wekan-project
  labels:
    app: wekan
spec:
  ports:
  - port: 80
  selector:
    app: wekan
    tier: backend
  type: NodePort
---
apiVersion: apps/v1beta
kind: Deployment
metadata:
  name: wekandb
  labels:
    app: wekan
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wekan
        tier: backend
    spec:
      containers:
      - image: mongodb:3.2.15
        name: mongodb
        ports:
        - containerPort: 27017
          name: wekandb
